# simple_project

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  prd.md  pyproject.toml
.github/agents/: app-dev-agent.agent.md
.github/dev-standards/: py_proj_guidelines.md  pyqt_guidelines.md  python_guidelines.md
.github/workflows/: ci.yml  release.yml
src/: main.py
src/simple/: __init__.py  _tools.py
src/simple/controllers/: __init__.py  progress_controller.py
src/simple/resources/: resources.qrc
src/simple/ui/: main_window.ui  progress_dialog.ui
src/simple/views/: __init__.py  main_window.py  progress_dialog.py
tests/: conftest.py
tests/unit/: __init__.py
tests/unit/controllers/: __init__.py  test_progress_controller.py
tests/unit/views/: __init__.py  test_main_window.py  test_progress_dialog.py
