[project]
name = "simple"
version = "0.1.0"
description = "PySide6 desktop application demonstrating a controlled start/stop workflow with real-time progress feedback."
readme = "README.md"
authors = [
    { name = "tim slator", email = "trslator@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.7",
]

[project.scripts]
build-ui  = "simple._tools:build_ui"
build-exe = "simple._tools:build_exe"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pyinstaller>=6.8",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-qt>=4.4",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
addopts = [
    "--cov=simple",
    "--cov-report=term-missing",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=90",
]
testpaths = ["tests"]

[tool.coverage.run]
omit = [
    "src/simple/_tools.py",
    "src/main.py",
    "src/simple/generated/*.py",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
check_untyped_defs = true
ignore_missing_imports = false
mypy_path = ["src"]

[[tool.mypy.overrides]]
module = "simple.*"
disallow_untyped_calls = true

[[tool.mypy.overrides]]
module = "simple.generated.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
